<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="invalid_ipaddress_message">is not a valid IP address.</string>
    <string name="mandatory_inputfield_message">Please verify that all fields have been entered.</string>
    <string name="invalid_port_message">is not a valid port number.</string>
    <string name="ip_address_sample">10.1.7.123</string>
    <string name="port_address_sample">51001</string>
    <string name="dragon_user_name_sample">Charlie</string>
    <string name="copyright">© 2012 Nuance Communications, Inc.</string>
    <string name="app_name">Microphone</string>
    <string name="about_dragon_link">http://Dragon.nuance.com/aboutdragon</string>
    <string name="remote_microphone_link">http://Dragon.nuance.com/remotemicrophone</string>
    <string name="use_barcode">Use a barcode</string>
    <string name="Problem_reading_bar_code">Problem reading barcode</string>
    <string name="bad_barcode_Message">The barcode did not get read properly--either try again or type in the information.</string>
    <string name="Settings">Settings</string>
    <string name="settings_menu">Settings</string>
    <string name="Information">Information</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="about_dragon_speech_recognition">About Dragon Speech Recognition</string>
    <string name="about_dragon_remote_microphone">About Dragon Remote Microphone</string>
    <string name="error_connect">Unable to connect</string>
    <string name="Error_Sending_Data_Message">There is a problem sending audio over the network. Your network may be running slow.</string>
    <string name="Wrong_user_loaded_Title">Wrong profile loaded</string>
    <string name="wrong_user_message">The profile \"@\" is loaded on your computer, not \"@\". Please load the correct profile.</string>
    <string name="No_user_loaded_Title">No profile is loaded</string>
    <string name="no_user_message">Your computer does not have a Dragon Remote Microphone profile loaded. Please load your profile.</string>
    <string name="Someone_Else_Connected">Another Dragon Remote Microphone is connected to your computer.</string>
    <string name="Someone_Else_Connected_Title">Cannot connect to computer</string>
    <string name="Connection_Problem_Detected">Connection Problem Detected</string>
    <string name="Connection_Failed_No_Server">Check if Dragon is running on your computer</string>
    <string name="Edit_computer_information">Edit computer information</string>
    <string name="Try_again">Try again</string>
    <string name="No_WiFi">Wi-Fi connection unavailable</string>
    <string name="No_WiFi_Message">Go to Settings &gt; Wi-Fi to check your connection.</string>
    <string name="error_gone">Wi-Fi connection has been interrupted.</string>
    <string name="error_not_implemented">The requested function is not supported or contains invalid parameters.</string>
    <string name="error_not_modified">The requested change could not be completed.</string>
    <string name="dns_ip_choice_prompt">Select</string>
    <string name="port_address">Computer Port</string>
    <string name="ip_address">IP Address</string>
    <string name="dragon_user_name">Dragon Profile Name</string>
    <string name="Computer">Computer</string>
    <string name="Choose_a_computer_to_connect_to">Choose a computer to connect to</string>
    <string name="Enter_information_manually">Enter information manually</string>
    <string name="Enter_Settings">Enter Settings</string>
    <string name="Select_Menu_to_begin">Select Menu to begin</string>
    <string name="Manual_Entry">Manual Entry</string>
    <string name="Manual_Entry_label">Manual Entry</string>
    <string name="first_splash_title_one">The Dragon Remote Microphone works directly with Dragon on your PC or Mac.</string>
    <string name="first_splash_title_two"></string>
    <string name="profile">Profile</string>
    <string name="please_verify_input">Please verify input</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="button_ok">OK</string>
    <string name="result_text">Found plain text</string>
    <string name="preferences_actions_title">When a barcode is found…</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Use %s as a placeholder for the product ID, and %f for format</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
    <string name="preferences_reverse_image_title">Reversed camera image</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode…</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="wifi_network" translatable="false">TTS Wifi Hotspot</string>
    <string name="wifi_pass" translatable="false">123456</string>
</resources>
