<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/internal_error_layout_root"
    android:layout_width="300.0dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/Connection_Failed_No_Server"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@id/buttonTryAgain"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:text="@string/Try_again"
        android:textSize="15.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@id/buttonEditComputerInfo"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonTryAgain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:text="@string/Edit_computer_information"
        android:textSize="15.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@id/buttonCancel"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEditComputerInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:text="@string/Cancel"
        android:textSize="15.0sp"
        android:textStyle="bold" />
</RelativeLayout>