<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/no_selection_layout_root"
    android:layout_width="300.0dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@id/buttonEnterSettings"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32.0dip"
        android:text="@string/Enter_Settings"
        android:textSize="15.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@id/buttonEnterInfoManually"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/buttonEnterSettings"
        android:layout_below="@id/buttonEnterSettings"
        android:layout_marginTop="10.0dip"
        android:text="@string/Enter_information_manually"
        android:textSize="15.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@id/buttonCancel"
        android:layout_width="250.0dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEnterInfoManually"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:text="@string/Cancel"
        android:textSize="15.0sp"
        android:textStyle="bold" />
</RelativeLayout>