<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/Layout_Settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Color_Text"
    android:orientation="vertical"
    android:padding="10.0px">

    <RelativeLayout
        android:id="@id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/info_top">

        <TextView
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Settings"
            android:textAppearance="?android:textAppearanceLarge" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <TextView
            android:id="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAppearance="?android:textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />

        <TextView
            android:id="@id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Computer"
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/manualEntry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20.0dip"
        android:paddingTop="20.0dip">

        <TextView
            android:id="@id/manualEntryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:text="@string/Manual_Entry_label"
            android:textAppearance="?android:textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />

        <ImageView
            android:id="@id/chevronimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="18.0dip"
            android:background="@drawable/settings_chevron" />
    </LinearLayout>

    <ListView
        android:id="@id/profilelistView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView2" />
</LinearLayout>